# SkiaShift

./: README.md  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/jefino/skiashift/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  skiashift.cpp
app/src/main/java/com/jefino/skiashift/: AppManager.kt  BootReceiver.kt  DumpMethods.java  MainActivity.kt  SkiaShiftModule.kt  SkiaShiftProvider.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jefino/skiashift/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
